[package]
name = "cheat_engine_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
windows_bindings = { path = "windows_bindings" }
windows = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
