[package]
name = "cheat_engine_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = { path = "windows" }

[target.x86_64-unknown-linux-gnu.dependencies]
linux = { path = "linux" }

[dependencies]
