[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = { path = "../windows" }

[target.x86_64-unknown-linux-gnu.dependencies]
linux = { path = "../linux" }

[dependencies]
core = { path = "../core" }
scanner = { path = "../scanner" }
jsonrpsee = { version = "0.18.2", features = ["server-core"] }
tokio = { version = "1.29.1", features = ["rt"] }
serde = { version = "1.0.171", features = ["derive"] }