[package]
name = "context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
scanner = { path = "../scanner" }
jsonrpsee = { version = "0.18.2", features = ["server-core"] }
tokio = { version = "1.29.1", features = ["rt"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }