[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu.dependencies]
linux = { path = "../linux" }

[target.'cfg(windows)'.dependencies]
windows = { path = "../windows" }

[dependencies]